Fixed mobile navigation logo spacing on home scrteen

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -21,5 +21,10 @@
       max-width: 200px;
       align-self: flex-start;
     }
+
+    @media screen and (max-width: $bpMedium) {
+      margin-left: -#{$spacing * 2};
+      max-width: 150px;
+    }
   }
 }
